[gd_scene load_steps=6 format=2]

[ext_resource path="res://towers/tower.tscn" type="PackedScene" id=1]
[ext_resource path="res://towers/barracks/barracks_info.tres" type="Resource" id=2]
[ext_resource path="res://towers/barracks/barracks.gd" type="Script" id=3]
[ext_resource path="res://assets/towers/barracks/Barracks.png" type="Texture" id=4]
[ext_resource path="res://assets/towers/barracks/Barracks_enemy.png" type="Texture" id=5]

[node name="Barracks" groups=["barracks"] instance=ExtResource( 1 )]
script = ExtResource( 3 )
type = 0
regular_texture = ExtResource( 4 )
enemy_texture = ExtResource( 5 )
tower_info = ExtResource( 2 )
unit_scene = "res://dudes/dude.tscn"

[node name="Sprite" parent="." index="0"]
texture = ExtResource( 4 )

[node name="Timer" type="Timer" parent="." index="1"]
wait_time = 5.0
autostart = true

[node name="WarTimer" type="Timer" parent="." index="2"]
wait_time = 0.3

[node name="DudeSpawnLocation" type="Node2D" parent="." index="3"]
position = Vector2( 29, 24 )

[node name="Area2D" parent="." index="4"]
pause_mode = 2

[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
[connection signal="timeout" from="WarTimer" to="." method="_on_WarTimer_timeout"]
